--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <![endif]-->
   </head>
   <body>
-	  <h1>Hello, world!</h1><br /><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button>Press Me</button></a>
+	  <h1>Hello, world!</h1><br /><button onclick="$('#cat').show()">Press Me</button>
+	  <br />
+	  <img style="display:none" id="cat" src="/cat.jpg"></img>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
